--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/Level1CapstoneProject/Assets/styles.css" />
+    <link rel="stylesheet" href="/Assets/styles.css" />
     <title>Benjamin Virgin's Resume</title>
   </head>
   <body>
@@ -13,14 +13,14 @@
         <div id="header-left-side">
           <img
             id="profilePic"
-            src="/Level1CapstoneProject/Assets/images/Profile pic.png"
+            src="/Assets/images/Profile pic.png"
             alt="My beautiful face"
           />
           <h1 id="header-h1" class="header-Hs">Benjamin Virgin</h1>
           <h2 id="header-h2" class="header-Hs">Software Developer</h2>
           <img
             id="gps"
-            src="/Level1CapstoneProject/Assets/images/gpslocationicon (2).png"
+            src="/Assets/images/gpslocationicon (2).png"
             alt="gps locator arrow"
           />
           <h3 id="header-h3" class="header-Hs">Utah, USA</h3>
@@ -38,21 +38,21 @@
           <a href="https://www.linkedin.com/in/benjamin-v-81b762162/">
             <img
               class="socialImg"
-              src="/Level1CapstoneProject/Assets/images/linkedinlogo.png"
+              src="/Assets/images/linkedinlogo.png"
               alt="Link to my LinkedIn Profile"
             />
           </a>
           <a href="https://github.com/benvirgin">
             <img
               class="socialImg"
-              src="/Level1CapstoneProject/Assets/images/githublogo.png"
+              src="/Assets/images/githublogo.png"
               alt="Link to my GitHub Profile"
             />
           </a>
           <a href="https://stackoverflow.com/users/19636707/benjamin-virgin">
             <img
               class="socialImg"
-              src="/Level1CapstoneProject/Assets/images/stackoverflowlogo.png"
+              src="/Assets/images/stackoverflowlogo.png"
               alt="Link to my Stack Overflow Profile"
             />
           </a>
@@ -62,7 +62,7 @@
     <main>
       <section id="jobs">
         <div class="jobs-right-side">
-          <img id="wFGImage" src="/Level1CapstoneProject/Assets/images/wfglogo.png" alt="Wealth Financial Group Logo">
+          <img id="wFGImage" src="/Assets/images/wfglogo.png" alt="Wealth Financial Group Logo">
         </div>
       <h2 class="bodyHeading">Work Experience</h2>
       <h3 class="jobSubHeading">Financial Advisor &#183; Wealth Financial Group</h3>
@@ -77,7 +77,7 @@
     </section>
       <section id="jobs">
         <div class="jobs-right-side">
-          <img id="tPImage" src="/Level1CapstoneProject/Assets/images/turfpluslogo.png" alt="Turf Plus Logo">
+          <img id="tPImage" src="/Assets/images/turfpluslogo.png" alt="Turf Plus Logo">
         </div>
       <h3 class="jobSubHeading">Assistant Manager &#183; Turf Plus</h3>
       <h4 class="job-dates">February 2017 - October 2019</h4>
@@ -118,7 +118,7 @@
     </section>
       <section id="jobs">
         <div class="jobs-right-side">
-          <img id="lDSImage" src="/Level1CapstoneProject/Assets/images/ldslogo.jpg" alt="The Church of Jesus Christ of Latter-day Saints Logo">
+          <img id="lDSImage" src="/Assets/images/ldslogo.jpg" alt="The Church of Jesus Christ of Latter-day Saints Logo">
         </div>
       <h3 class="jobSubHeading">Missionary &#183; The Church of Jesus Christ of Latter-day Saints</h3>
       <h4 class="job-dates">November 2012 - November 2014</h4>
@@ -133,12 +133,12 @@
     <section id="education">
       <h2 class="bodyHeading">Education</h2>
       <div class="education-right-side">
-        <img id="codeXAcademyImage" class="educationImgs" src="/Level1CapstoneProject/Assets/images/CodeXLogo.png" alt="The CodeX Academy Logo">
+        <img id="codeXAcademyImage" class="educationImgs" src="/Assets/images/CodeXLogo.png" alt="The CodeX Academy Logo">
       </div>
       <h2 class="educationHeadings">CodeX Academy</h2>
       <h3 class="educationSubHeadings">Software Developer</h3>
       <div class="education-right-side">
-        <img id="bYUIImage" class="educationImgs" src="/Level1CapstoneProject/Assets/images/byuilogo.png" alt="The BYU-Idaho Logo">
+        <img id="bYUIImage" class="educationImgs" src="/Assets/images/byuilogo.png" alt="The BYU-Idaho Logo">
       </div>
       <h2 class="educationHeadings">BYU-Idaho</h2>
       <h3 class="educationSubHeadings">Bachelor&#39;s degree in Business Management with an Emphasis in Entrepreneurship</h3>
@@ -174,6 +174,6 @@
         </div>
       </div>
     </footer>
-    <script src="/Level1CapstoneProject/Assets/app.js"></script>
+    <script src="/Assets/app.js"></script>
   </body>
 </html>
