adding Favicon  Changes to be committed: 	new file:   Assets/images/resumefavicon.png 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/Assets/styles.css" />
     <title>Benjamin Virgin's Resume</title>
+    <link rel="icon" type="image/x-icon" href="/Assets/images/resumefavicon.png">
   </head>
   <body>
     <header>
