Serious changes to content  Changes to be committed: 	modified:   Assets/app.js 	new file:   Assets/images/FIREpreneurshipLogo.png 	new file:   Assets/images/aptimaizLogo.jpg 	new file:   Assets/images/emailIcon.png 	deleted:    Assets/images/ldslogo.jpg 	new file:   Assets/images/phoneIcon.png 	deleted:    Assets/images/turfpluslogo.png 	deleted:    Assets/images/wfglogo.png 	modified:   Assets/styles.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -18,23 +18,17 @@
             alt="My beautiful face"
           />
           <h1 id="header-h1" class="header-Hs">Benjamin Virgin</h1>
-          <h2 id="header-h2" class="header-Hs">Software Developer</h2>
+          <h2 id="header-h2" class="header-Hs">Web Developer</h2>
           <img
             id="gps"
             src="/Assets/images/gpslocationicon (2).png"
             alt="gps locator arrow"
           />
-          <h3 id="header-h3" class="header-Hs">Utah, USA</h3>
+          <h3 id="header-h3" class="header-Hs"><address>Eagle Mountain, Utah 84005</address></h3>
         </div>
         <div id="header-right-side">
           <p id="header-p">
-            I grew up in an entrepreneurial family where I learned to
-            intuitively grasp context, how to add value, and maximize
-            productivity by myself as well as in a team environment. It is a
-            core belief of mine that if I focus on always adding more value to
-            the organization, I do not need to worry about the value I receive
-            because companies pay for value received, not hours worked. I look
-            forward to seeing how much value I can contribute
+            A passionate web developer possessing experience in designing, building and maintaining high quality, highly functional websites that fill the needs of the organizations I have worked for and that have had game changing results. Skilled at directing development with a results driven approach. Contributed to and collaborated in the building of said websites. As an entrepreneur, I possess the ability to grasp context, continually add value, and maximize productivity by myself as well as in a team environment. Currently looking for a role that complements my skill set and experience.
           </p>
           <a href="https://www.linkedin.com/in/benjamin-v-81b762162/">
             <img
@@ -57,77 +51,51 @@
               alt="Link to my Stack Overflow Profile"
             />
           </a>
+          <a href="mailto:benjamincvirgin@gmail.com">
+            <img
+              class="socialImg"
+              src="/Assets/images/emailIcon.png"
+              alt="Link to send me an Email"
+            />
+          </a>
+          <a href="tel:18013687699">
+            <img
+              class="socialImg"
+              src="/Assets/images/phoneIcon.png"
+              alt="Link to call me"
+            />
+          </a>
         </div>
       </div>
     </header>
     <main>
       <section id="jobs">
         <div class="jobs-right-side">
-          <img id="wFGImage" src="/Assets/images/wfglogo.png" alt="Wealth Financial Group Logo">
+          <img id="firepreneurshipImage" src="/Assets/images/FIREpreneurshipLogo.png" alt="FIREpreneurship.com Logo">
         </div>
       <h2 class="bodyHeading">Work Experience</h2>
-      <h3 class="jobSubHeading">Financial Advisor &#183; Wealth Financial Group</h3>
-      <h4 class="job-dates">July 2019 - January 2020</h4>
+      <h3 class="jobSubHeading">Software Engineer &#183; FIREpreneurship.com</h3>
+      <h4 class="job-dates">October 2021 - Present</h4>
     </div>
     <div class="bodyBullets">
       <ul>
-        <li>Contact and visit people to teach them about finances and investing their money catering to their needs</li>
-        <li>Focus on the needs of the individual to provide retirement that not only assures they feel comfortable, but maximizes their long term returns as well</li>
+        <li>Followed coding standards and best practices to ensure quality in the finished products</li>
+        <li>Worked with clients and third-party vendors to identify, prioritize and implement desired features</li>
       </ul>
     </div>
     </section>
       <section id="jobs">
         <div class="jobs-right-side">
-          <img id="tPImage" src="/Assets/images/turfpluslogo.png" alt="Turf Plus Logo">
+          <img id="aptimaizImage" src="/Assets/images/aptimaizLogo.jpg" alt="Aptimaiz Logo">
         </div>
-      <h3 class="jobSubHeading">Assistant Manager &#183; Turf Plus</h3>
-      <h4 class="job-dates">February 2017 - October 2019</h4>
+      <h3 class="jobSubHeading">Web Developer &#183; Aptimaiz</h3>
+      <h4 class="job-dates">July 2020 - October 2021</h4>
     </div>
     <div class="bodyBullets">
       <ul>
-        <li>Help increase my team&#39;s productivity metrics by up to 50% by example and extensive training</li>
-        <li>Help in the hiring of great employees from implementing recruiting techniques to onboarding</li>
-        <li>Lead out training sessions to increase work quality and ultimately customer experience</li>
-        <li>Produce and edit written web content</li>
-        <li>Develop and implement social media ad campaigns to educate customers and drive repeated purchases</li>
-      </ul>
-    </div>
-    </section>
-      <section id="jobs">
-      <h3 class="jobSubHeading">Office Manager &#183; Turf Plus</h3>
-      <h4 class="job-dates">February 2010 - November 2012</h4>
-    </div>
-    <div class="bodyBullets">
-      <ul>
-        <li>Generate over $1,000 in revenue daily by timely following up with customers and providing exceptional support</li>
-        <li>Maintain a customer retention rate 92%</li>
-      </ul>
-    </div>
-    </section>
-      <section id="jobs">
-      <h3 class="jobSubHeading">Lawn Specialist &#183; Turf Plus</h3>
-      <h4 class="job-dates">February 2010 - November 2012</h4>
-    </div>
-    <div class="bodyBullets">
-      <ul>
-        <li>Ensuring lawns looked great in a very timely manner</li>
-        <li>Answer questions / Address customers concerns</li>
-        <li>Train new lawn specialists individually resulting in increased team productivity and customer satisfaction metrics</li>
-        <li>Generate new sales driven by referrals</li>
-      </ul>
-    </div>
-    </section>
-      <section id="jobs">
-        <div class="jobs-right-side">
-          <img id="lDSImage" src="/Assets/images/ldslogo.jpg" alt="The Church of Jesus Christ of Latter-day Saints Logo">
-        </div>
-      <h3 class="jobSubHeading">Missionary &#183; The Church of Jesus Christ of Latter-day Saints</h3>
-      <h4 class="job-dates">November 2012 - November 2014</h4>
-    </div>
-    <div class="bodyBullets">
-      <ul>
-        <li>Became fluent in Spanish helping individuals and families overcome challenges</li>
-        <li>Lead local team on a daily basis in contacting people and setting appointments</li>
+        <li>Utilized front-end frameworks (HTML, CSS, JavaScript) to improve customer conversion by implementing dynamic pricing</li>
+        <li>Collaborated with the design team to lead the technical implementation of the company's UI/UX rebranding effort</li>
+        <li>Performed technology and tools assessments to drive the technical strategy of the organization</li>
       </ul>
     </div>
     <br>
@@ -151,18 +119,14 @@
           <h2 class="footerHs">Skills</h2>
           <hr id="hr1">
           <ul>
-            <li class="footerLI">Productivity</li>
-            <li class="footerLI">Training Sessions</li>
-            <li class="footerLI">Google Drive</li>
-            <li class="footerLI">PowerPoint</li>
-            <li class="footerLI">Excel</li>
+            <li class="footerLI">HTML/CSS</li>
             <li class="footerLI">JavaScript</li>
             <li class="footerLI">React.js</li>
             <li class="footerLI">Node.js</li>
-            <li class="footerLI">HTML/CSS</li>
             <li class="footerLI">HEROKU</li>
             <li class="footerLI">GitHub</li>
             <li class="footerLI">Git Bash</li>
+            <li class="footerLI">Shopify</li>
           </ul>
         </div>
         <div id="footer-right-side">
