fixed address  On branch main  Your branch is up to date with 'origin/main'.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             src="/Assets/images/gpslocationicon (2).png"
             alt="gps locator arrow"
           />
-          <h3 id="header-h3" class="header-Hs"><address>Salt Lake City Metropolitan Aran, Utah USA</address></h3>
+          <h3 id="header-h3" class="header-Hs"><address>Salt Lake City Metropolitan Area, Utah</address></h3>
         </div>
         <div id="header-right-side">
           <p id="header-p">
