Added Skills  Changes to be committed: 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -119,13 +119,15 @@
           <h2 class="footerHs">Skills</h2>
           <hr id="hr1">
           <ul>
+            <li class="footerLI">Browser DOM</li>
+            <li class="footerLI">Visual Studio Code</li>
+            <li class="footerLI">Git Bash</li>
             <li class="footerLI">HTML/CSS</li>
             <li class="footerLI">JavaScript</li>
             <li class="footerLI">React.js</li>
             <li class="footerLI">Node.js</li>
             <li class="footerLI">HEROKU</li>
             <li class="footerLI">GitHub</li>
-            <li class="footerLI">Git Bash</li>
             <li class="footerLI">Shopify</li>
           </ul>
         </div>
